stop firefox showing a scrollbar when clicking menu

--- a/app/styles/menu.sass
+++ b/app/styles/menu.sass
@@ -2,7 +2,8 @@
 
 #menu
   float: left
-  margin: 45px 10px 0 60px
+  margin: 43px 10px 0 60px
+  overflow: hidden
   li
     float: left
     background: #333
